--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "async-sema": "3.1.0",
     "github-slugger": "1.2.1",
     "katex": "0.12.0",
-    "next": "^10.0.8",
-    "prismjs": "1.17.1",
+    "next": "^10.1.2",
+    "prismjs": "^1.23.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "uuid": "8.1.0"
