--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "async-sema": "3.1.0",
     "github-slugger": "1.2.1",
     "katex": "0.12.0",
-    "next": "^10.1.2",
+    "moment-timezone": "^0.5.33",
+    "next": "^10.1.3",
     "prismjs": "^1.23.0",
-    "react": "17.0.1",
+    "react": "^17.0.2",
     "react-dom": "17.0.1",
+    "react-live-clock": "^5.0.16",
+    "react-moment": "^1.1.1",
+    "react-multi-carousel": "^2.6.2",
     "uuid": "8.1.0"
   },
   "devDependencies": {
