--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "github-slugger": "1.2.1",
     "katex": "0.12.0",
     "moment-timezone": "^0.5.33",
-    "next": "^10.1.3",
+    "next": "^11.0.1",
     "prismjs": "^1.23.0",
     "react": "^17.0.2",
-    "react-dom": "17.0.1",
+    "react-dom": "^17.0.2",
     "react-live-clock": "^5.0.16",
     "react-moment": "^1.1.1",
     "react-multi-carousel": "^2.6.2",
