--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@zeit/react-jsx-parser": "2.0.0",
     "async-sema": "3.1.0",
+    "framer-motion": "^4.1.17",
     "github-slugger": "1.2.1",
     "katex": "0.12.0",
     "moment-timezone": "^0.5.33",
@@ -19,6 +20,7 @@
     "prismjs": "^1.23.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.0",
     "react-live-clock": "^5.0.16",
     "react-moment": "^1.1.1",
     "react-multi-carousel": "^2.6.2",
