--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "moment-timezone": "^0.5.33",
     "next": "^11.0.1",
     "prismjs": "^1.23.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.0",
-    "react-live-clock": "^5.0.16",
+    "react-live-clock": "^5.10.0",
     "react-moment": "^1.1.1",
     "react-multi-carousel": "^2.6.2",
     "uuid": "8.1.0"
