--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "pre-commit": "lint-staged",
   "dependencies": {
-    "@zeit/react-jsx-parser": "2.0.0",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.6",
     "async-sema": "3.1.0",
     "framer-motion": "^4.1.17",
     "github-slugger": "1.2.1",
