--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-live-clock": "^5.10.0",
     "react-moment": "^1.1.1",
     "react-multi-carousel": "^2.6.2",
+    "server-only": "^0.0.1",
     "uuid": "8.1.0"
   },
   "devDependencies": {
